--- a/HotelAdministradorFrontend/src/app/app.component.html
+++ b/HotelAdministradorFrontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-header">
     <nav class="navbar navbar-expand-lg bg-white fixed-top">
-        <a class="navbar-brand" routerLink="/inicio">Sistema Hotel</a>
+        <a class="navbar-brand" routerLink="/inicio">Sistema Hotel Jhon Gutierrez</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,7 +8,7 @@
     </nav>
   </div>
    
-  
+    
   <div class="nav-left-sidebar sidebar-dark">
     <div class="menu-list">
         <nav class="navbar navbar-expand-lg navbar-light">
