--- a/HotelAdministradorFrontend/src/app/pages/usuarios/registro-usuarios/registro-usuarios.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/usuarios/registro-usuarios/registro-usuarios.component.html
@@ -2,14 +2,13 @@
 <div class="row">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
         <div class="page-header">
-            <h2 class="pageheader-title">Form Validations </h2>
-            <p class="pageheader-text">Proin placerat ante duiullam scelerisque a velit ac porta, fusce sit amet vestibulum mi. Morbi lobortis pulvinar quam.</p>
+            <h2 class="pageheader-title">Usuarios</h2>
             <div class="page-breadcrumb">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Dashboard</a></li>
-                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Forms</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Form Validations</li>
+                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Usuarios</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Registro Usuario</li>
                     </ol>
                 </nav>
             </div>
@@ -24,74 +23,120 @@
     <!-- ============================================================== -->
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
         <div class="card">
-            <h5 class="card-header">Bootstrap Validation Form</h5>
+            <h5 class="card-header">Registro Usuario</h5>
             <div class="card-body">
                 <form class="needs-validation" novalidate>
                     <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <label for="validationCustom01">First name</label>
-                            <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
+                        <div class="col-sm-4 col-lg-6">
+                            <label for="validationCustom01">Nombres</label>
+                            <input type="text" class="form-control" id="validationCustom01" placeholder="ingrese nombre" value="" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
                         </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <label for="validationCustom02">Last name</label>
-                            <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
+                        <div class="col-sm-4 col-lg-6">
+                            <label for="validationCustom02">Apellidos</label>
+                            <input type="text" class="form-control" id="validationCustom02" placeholder="Apellidos" value="" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
                         </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <label for="validationCustomUsername">Username</label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                </div>
-                                <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
-                                <div class="invalid-feedback">
-                                    Please choose a username.
-                                </div>
+
+                        <div class="col-sm-4 col-lg-3">
+                            <div class="form-group">
+                                <label for="input-select">Tipo Documento</label>
+                                <select class="form-control" id="input-select">
+                                    <option>Seleccione</option>
+                                    <option>DNI</option>
+                                    <option>CE</option>
+                                </select>
                             </div>
+                        </div>
+                        <div class="col-sm-4 col-lg-3">
+                            <label for="numeroDocumento01">Numero documento</label>
+                            <input type="text" class="form-control" id="numeroDocumento01" placeholder="Ingrese numero documento" value="" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+
+
+                        <div class="col-sm-4 col-lg-3">
+                            <div class="form-group">
+                                <label for="input-select">Genero</label>
+                                <select class="form-control" id="input-select">
+                                    <option>Seleccione</option>
+                                    <option>Masculino</option>
+                                    <option>Femenino</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4 col-lg-3">
+                            <div class="form-group">
+                                <label>Fecha Nacimiento<small class="text-muted"> (dd/mm/yyyy) </small></label>
+                                <input type="text" class="form-control date-inputmask" id="fechaNacimiento" placeholder="">
+                            </div>
+                    </div>
+
+                    <div class="col-sm-4 col-lg-6">
+                        <label for="ValidacionCorreo01">Correo</label>
+                        <input type="text" class="form-control" id="ValidacionCorreo01" placeholder="Ingrese correo" value="" required>
+                        <div class="valid-feedback">
+                            Looks good!
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                            <label for="validationCustom03">City</label>
-                            <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid city.
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                            <label for="validationCustom04">State</label>
-                            <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid state.
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                            <label for="validationCustom05">Zip</label>
-                            <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid zip.
-                            </div>
-                        </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+
+
+
+                      
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-4 col-lg-3">
                             <div class="form-group">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                    <label class="form-check-label" for="invalidCheck">
-                                        Agree to terms and conditions
-                                    </label>
-                                    <div class="invalid-feedback">
-                                        You must agree before submitting.
-                                    </div>
-                                </div>
+                                <label for="input-select">Perfil</label>
+                                <select class="form-control" id="input-select">
+                                    <option>Seleccione</option>
+                                    <option>Administrador</option>
+                                    <option>Recepcionista</option>
+                                    <option>Supervisor</option>
+                                </select>
                             </div>
                         </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <button class="btn btn-primary" type="submit">Submit form</button>
+
+                        <div class="col-sm-4 col-lg-3">
+                            <label for="ValidacionUsuario01">Usuario</label>
+                            <input type="text" class="form-control" id="ValidacionUsuario01" placeholder="Ingrese nombre usuario" value="" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4 col-lg-3">
+                            <div class="form-group">
+                                <label for="input-select">Estado</label>
+                                <select class="form-control" id="input-select">
+                                    <option>Seleccione</option>
+                                    <option>Activo</option>
+                                    <option>Inactivo</option>
+                                    <option>Bloqueado</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    </div>
+
+                        
+
+                    <div class="form-row">
+                        
+                        
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-right">
+                            <button class="btn btn-primary" type="submit">Registrar usuario</button>
+
+                            <button type="button" routerLink="/usuarios" class="btn waves-effect waves-light btn-secondary mr-2" ><i class="mr-2 mdi"></i>Cancelar</button>
                         </div>
                     </div>
                 </form>
