--- a/HotelAdministradorFrontend/src/app/app.component.html
+++ b/HotelAdministradorFrontend/src/app/app.component.html
@@ -40,7 +40,7 @@
                     <div id="submenu-3" class="collapse submenu" style="">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/cards.html">Detalle Habitacion <span class="badge badge-secondary">New</span></a>
+                                <a class="nav-link" routerLink="/Habitaciones/detalle-habitacion" >Detalle Habitacion <span class="badge badge-secondary">New</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="pages/general.html">Tipo Habitacion</a>
