--- a/HotelFrontend/src/app/pages/servicios/servicios.component.html
+++ b/HotelFrontend/src/app/pages/servicios/servicios.component.html
@@ -1,1 +1,16 @@
-<p>servicios works!</p>
+<div class = "container" style="padding-top: 120px;">
+    <h3>Nuestros servicios</h3>
+    <p>
+        loren ipsum loren ipsum lalalalalalala
+        loren ipsum lalalalalalala loren ipsum lalalalalalala
+        loren ipsum lalalalalalala loren ipsum lalalalalalala
+        loren ipsum lalalalalalala loren ipsum lalalalalalala
+        loren ipsum lalalalalalala loren ipsum lalalalalalala
+        loren ipsum lalalalalalala loren ipsum lalalalalalala
+
+
+
+
+    </p>
+    
+</div>
