--- a/HotelFrontend/src/app/app.component.html
+++ b/HotelFrontend/src/app/app.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="opacity: 1;background-color: rgba(52,58,64,0.75);">
-  <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="home" style="color: rgb(255,165,85);">J&amp;J</a><button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarResponsive" type="button" data-toogle="collapse"
+  <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="home" style="color: rgb(255,165,85);">Hotel Wimbledon</a><button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarResponsive" type="button" data-toogle="collapse"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgb(255,165,85);"><i class="fa fa-bars" style="color: rgba(255,255,255,0.75);"></i></button>
       <div class="collapse navbar-collapse"
           id="navbarResponsive">
           <ul class="nav navbar-nav ml-auto text-uppercase">
 
-            <!----
-              <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" href="#portfolio" style="color: rgb(255,165,85);">PROYECTOS</a></li>
-              <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" href="#services" style="color: rgb(255,165,85);">DEPARTAMENTOs</a></li>
-          -->
+            
+              <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" routerLink="home" style="color: rgb(255,165,85);">Inicio</a></li>
+              <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" routerLink="habitaciones" style="color: rgb(255,165,85);">Habitaciones</a></li>
+          
               
               <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" routerLink="reservas" style="color: rgb(255,165,85);">Reservas</a></li>
               <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" routerLink="servicios" style="color: rgb(255,165,85);">Servicios</a></li>
-              <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" routerLink="contactenos" style="color: rgb(255,165,85);">Contactenos</a></li>
+              <li class="nav-item" role="presentation"><a class="nav-link active js-scroll-trigger" routerLink="contactenos" style="color: rgb(255,165,85);">Contáctenos</a></li>
         </ul>
          <!----
             <a class="btn btn-primary text-black-50 border-dark" role="button" href="userLogin.html" style="font-family: Montserrat, sans-serif;font-weight: normal;background-color: rgb(255,165,85);border:none;">Acceder</a></div>
