--- a/HotelAdministradorFrontend/src/app/pages/checkin/checkin.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/checkin/checkin.component.html
@@ -1,75 +1,103 @@
-<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-    <div class="card">
-        <h5 class="card-header">Check In de Abitacion</h5>
-        <div class="card-body">
-            <form action="#" id="basicform" data-parsley-validate="">
 
-                <div class="form-group">
-                    <label for="inpuitFecha">Fecha de Registro</label>
-                      <div>   
-                        <input type="date" id="party" name="party" min="2010-01-01" max="2022-12-31" required>
-                        <span class="validity"></span>
-                      </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="inputDNI">DNI </label>
-                    <input id="inputDNI" type="DNI" name="DNI" data-parsley-trigger="change" required="" placeholder="Enter DNI" autocomplete="off" class="form-control">
-                </div>
-
-                <div class="form-group">
-                    <label for="inputNombre">Nombres y Apellidos </label>
-                    <input id="inputNombre" type="Nombre" name="Nombre" data-parsley-trigger="change" required="" placeholder="Enter Name" autocomplete="off" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="inputReserva">Numero de Reserva </label>
-                    <input id="inputReserva" type="Reserva" name="Reserva" data-parsley-trigger="change" required="" placeholder="Enter Reserva" autocomplete="off" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="inputAbitacion">Numero de Abitacion </label>
-                    <input id="inputAbitacion" type="Abitacion" name="Abitacion" data-parsley-trigger="change" required="" placeholder="Enter Abitacion" autocomplete="off" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="inputCantidad">Cantidad de Personas </label>
-                    <input id="inputCantidad" type="Cantidad" name="Cantidad" data-parsley-trigger="change" required="" placeholder="Enter Cantidad" autocomplete="off" class="form-control">
-                </div>
-
-                <div class="form-group">
-                    <label for="inputCheck-IN">Check-In </label>
-                    <div>   
-                        <input type="date" id="party" name="party" min="2010-01-01" max="2022-12-31" required>
-                        <input type="time">
-                        <span class="validity"></span>
-                      </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="inputCheck-Out">Check-Out </label>
-                    <div>   
-                        <input type="date" id="party" name="party" min="2010-01-01" max="2022-12-31" required>
-                        <input type="time">
-                        <span class="validity"></span>
-                      </div>
-                </div>
-
-                <div class="form-group">
-                    <textarea formControlName="message" class="form-control" rows="3" placeholder="Mensaje"></textarea>
-                </div>
-
-                <div class="row">
-                    <div class="col-sm-6 pb-2 pb-sm-4 pb-lg-0 pr-0">
-                        <label class="be-checkbox custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input"><span class="custom-control-label">Remember me</span>
-                        </label>
-                    </div>
-                    <div class="col-sm-6 pl-0">
-                        <p class="text-right">
-                            <button type="submit" class="btn btn-space btn-primary">Submit</button>
-                            <button class="btn btn-space btn-secondary">Cancel</button>
-                        </p>
-                    </div>
-                </div>
-            </form>
+<div class="row">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="page-header">
+            <h2 class="pageheader-title">Check In </h2>
+            <div class="page-breadcrumb">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">listado de Check In</a></li>
+                    </ol>
+                </nav>
+            </div>
         </div>
     </div>
+</div>
+
+
+<div class="row">
+    <!-- ============================================================== -->
+    <!-- validation form -->
+    <!-- ============================================================== -->
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="card">
+            <h5 class="card-header">Listado de Check In</h5>
+            <div class="card-body">
+                
+            <div class="row">
+                <div class="col-sm-4 col-lg-3">
+                <div class="form-group">
+                    <label for="input-select">Tipo de Habitacion</label>
+                    <select class="form-control col-12" id="input-select">
+                        <option>Seleccione</option>
+                                    <option>Suit</option>
+                                    <option>Con Yacusi</option>
+                                    <option>Basica</option>                                   
+                    </select>
+                </div>
+            </div>
+            <div class="col-sm-4 col-lg-3">
+                <div class="form-group">
+                    <label for="inputText3" class="col-form-label">Nombre usuario</label>
+                    <input id="inputText3" type="text" class="form-control">
+                </div>
+            </div>
+
+            </div>
+
+            <div class="row" >
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-right">
+
+                    <button type="button"  class="btn waves-effect waves-light btn-secondary mr-2"><i class="mr-2 ti-search"></i>Buscar</button>
+                    <button type="button" routerLink="/Control_Habitaciones/Check_in/registro_checkin" class="btn waves-effect waves-light btn-primary"><i class="mr-2 ti-plus"></i>Nuevo</button>
+         <!--     <button type="button"  class="btn waves-effect waves-light btn-secondary mr-2"><i class="mr-2 ti-search"></i>Buscar</button>
+                <a type="button" routerLink="usuarios/registro-usuario" class="btn waves-effect waves-light btn-primary"><i class="mr-2 ti-plus"></i>Nuevo</a>
+                <button type="button" class="btn waves-effect waves-light btn-secondary mr-2"><i class="mr-2 mdi mdi-filter-remove-outline"></i>Ocultar</button>
+                <button type="button" class="btn waves-effect waves-light btn-secondary mr-2"><i class="mr-2 ti-eraser"></i>Limpiar</button>
+                <button type="button" class="btn waves-effect waves-light btn-secondary mr-2"><i class="mr-2 mdi mdi-filter-outline"></i>Filtrar</button> -->
+            </div>
+            </div> 
+                
+
+                <div class="table-responsive">
+                <table class="table table-striped table-bordered first">
+                    <thead>
+                        <tr>
+                            
+                            <th>DNI</th>
+                            <th>Nombre Usuario</th>
+                            <th>Numero de Habitacion</th>
+                            <th>Check In</th>
+                            <th>Check Out</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            
+                            <td>45872596</td>
+                            <td>Juan Carlos</td>
+                            <td>25 Piso 8</td>
+                            <td>25/08/2021</td>
+                            <td>31/08/2021</td>
+                            <td>
+                                
+                                <button      type="button" title="Eliminar"class="btn btn-secondary btn-sm mr-2"><i class="mdi mdi-delete"></i></button> 
+                                                <button type="button" title="Editar" class="btn btn-secondary btn-sm mr-2" routerLink="/usuarios/registro-usuario"><i class="mdi mdi-account-edit"></i></button>
+
+                            </td>
+                        </tr>
+                        
+                    </tbody>
+                  
+                </table>
+            </div>
+
+
+            </div>
+        </div>
+    </div>
+    <!-- ============================================================== -->
+    <!-- end validation form -->
+    <!-- ============================================================== -->
 </div>
