--- a/HotelFrontend/src/app/pages/habitaciones/habitaciones.component.html
+++ b/HotelFrontend/src/app/pages/habitaciones/habitaciones.component.html
@@ -795,18 +795,18 @@
         
         <ul id="ulCategory">
         
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/pacific-dreams-presidencial/';">
+                    <li onclick="location.href='habitaciones/detalles';">
                 <div class="imgCategory">
-                    <img width="899" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dream-presidencial-0.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dream-presidencial-0.jpg 899w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dream-presidencial-0-300x200.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dream-presidencial-0-768x513.jpg 768w" sizes="(max-width: 899px) 100vw, 899px">	
+                    <img width="899" height="600" src="https://www.cataloniahotels.com/es/blog/wp-content/uploads/2016/05/habitaci%C3%B3n-individual-catalonia-620x412.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.cataloniahotels.com/es/blog/wp-content/uploads/2016/05/habitaci%C3%B3n-individual-catalonia-620x412.jpg 899w, https://www.cataloniahotels.com/es/blog/wp-content/uploads/2016/05/habitaci%C3%B3n-individual-catalonia-620x412.jpg 300w, https://www.cataloniahotels.com/es/blog/wp-content/uploads/2016/05/habitaci%C3%B3n-individual-catalonia-620x412.jpg 768w" sizes="(max-width: 899px) 100vw, 899px">	
                 </div>
                            <h5 class="priceCategory">S/ 150.00</h5>
-                <h2>Pacific Dreams Presidencial</h2>
+                <h2>Habitación Presidencial</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/pacific-dreams-presidencial/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/pacific-dreams/';">
+                    <li onclick="location.href='habitaciones/detalles2';">
                 <div class="imgCategory">
                     <img width="899" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dreams-3.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dreams-3.jpg 899w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dreams-3-300x200.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/pacific-dreams-3-768x513.jpg 768w" sizes="(max-width: 899px) 100vw, 899px">	
                 </div>
@@ -814,10 +814,10 @@
                 <h2>Pacific Dreams</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/pacific-dreams/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles2" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/suite-presidecial/';">
+                    <li onclick="location.href='habitaciones/detalles3';">
                 <div class="imgCategory">
                     <img width="899" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/suite-presidencial-2.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/suite-presidencial-2.jpg 899w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/suite-presidencial-2-300x200.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/suite-presidencial-2-768x513.jpg 768w" sizes="(max-width: 899px) 100vw, 899px">	
                 </div>
@@ -825,10 +825,10 @@
                 <h2>Suite Presidencial</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/suite-presidecial/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles3" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/venetian-flowers/';">
+                    <li onclick="location.href='habitaciones/detalles4';">
                 <div class="imgCategory">
                     <img width="899" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/venetian-flowers-1.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/venetian-flowers-1.jpg 899w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/venetian-flowers-1-300x200.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/venetian-flowers-1-768x513.jpg 768w" sizes="(max-width: 899px) 100vw, 899px">	
                 </div>
@@ -836,10 +836,10 @@
                 <h2>Venetian Flowers</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/venetian-flowers/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles4" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/riverside-dreams/';">
+                    <li onclick="location.href='habitaciones/detalles5';">
                 <div class="imgCategory">
                     <img width="1151" height="856" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/riverside-01.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/riverside-01.jpg 1151w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/riverside-01-300x223.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/riverside-01-768x571.jpg 768w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/riverside-01-1024x762.jpg 1024w" sizes="(max-width: 1151px) 100vw, 1151px">	
                 </div>
@@ -847,10 +847,10 @@
                 <h2>Riverside Dreams</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/riverside-dreams/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles5" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/camara-seca-y-jacuzzi/';">
+                    <li onclick="location.href='habitaciones/detalles6';">
                 <div class="imgCategory">
                     <img width="875" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/camara-seca-y-jacuzzi-2.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/camara-seca-y-jacuzzi-2.jpg 875w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/camara-seca-y-jacuzzi-2-300x206.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/camara-seca-y-jacuzzi-2-768x527.jpg 768w" sizes="(max-width: 875px) 100vw, 875px">	
                 </div>
@@ -858,10 +858,10 @@
                 <h2>Camara Seca y Jacuzzi</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/camara-seca-y-jacuzzi/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles6" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/con-jacuzzi-deluxe/';">
+                    <li onclick="location.href='habitaciones/detalles7';">
                 <div class="imgCategory">
                     <img width="359" height="269" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/4.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/4.jpg 359w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/4-300x225.jpg 300w" sizes="(max-width: 359px) 100vw, 359px">	
                 </div>
@@ -869,10 +869,10 @@
                 <h2>Habitación con Jacuzzi Deluxe</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/con-jacuzzi-deluxe/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles7" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/simple-vista-al-mar/';">
+                    <li onclick="location.href='habitaciones/detalles8';">
                 <div class="imgCategory">
                     <img width="421" height="445" src="https://www.wimbledon-hotel.com/wp-content/uploads/2016/06/simple-vista-al-mar.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2016/06/simple-vista-al-mar.jpg 421w, https://www.wimbledon-hotel.com/wp-content/uploads/2016/06/simple-vista-al-mar-284x300.jpg 284w" sizes="(max-width: 421px) 100vw, 421px">	
                 </div>
@@ -880,10 +880,10 @@
                 <h2>Simple Vista al Mar</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/simple-vista-al-mar/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles8" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/simple-con-jacuzzi/';">
+                    <li onclick="location.href='habitaciones/detalles9';">
                 <div class="imgCategory">
                     <img width="1044" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/simple-jacuzzi-2.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/simple-jacuzzi-2.jpg 1044w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/simple-jacuzzi-2-300x172.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/simple-jacuzzi-2-768x441.jpg 768w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/simple-jacuzzi-2-1024x589.jpg 1024w" sizes="(max-width: 1044px) 100vw, 1044px">	
                 </div>
@@ -891,10 +891,10 @@
                 <h2>Simple con Jacuzzi</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/simple-con-jacuzzi/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles9" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/hawaian-dreams/';">
+                    <li onclick="location.href='habitaciones/detalles10';">
                 <div class="imgCategory">
                     <img width="763" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/Hawaian-Dreams-2.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/Hawaian-Dreams-2.jpg 763w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/Hawaian-Dreams-2-300x236.jpg 300w" sizes="(max-width: 763px) 100vw, 763px">	
                 </div>
@@ -902,10 +902,10 @@
                 <h2>Hawaian Dreams</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/hawaian-dreams/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles10" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
-                    <li onclick="location.href='https://www.wimbledon-hotel.com/habitaciones/habitacion-deluxe/';">
+                    <li onclick="location.href='habitaciones/detalles11';">
                 <div class="imgCategory">
                     <img width="899" height="600" src="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/deluxe-03.jpg" class="attachment-full size-full wp-post-image" alt="" srcset="https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/deluxe-03.jpg 899w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/deluxe-03-300x200.jpg 300w, https://www.wimbledon-hotel.com/wp-content/uploads/2018/03/deluxe-03-768x513.jpg 768w" sizes="(max-width: 899px) 100vw, 899px">	
                 </div>
@@ -913,7 +913,7 @@
                 <h2>Habitación Deluxe</h2>
                 
                 <div class="clear"></div>
-                <a href="https://www.wimbledon-hotel.com/habitaciones/habitacion-deluxe/" class="guidCategory">MAS DETALLES &gt;&gt;</a>
+                <a href="habitaciones/detalles11" class="guidCategory">MAS DETALLES &gt;&gt;</a>
                 <img src="https://www.wimbledon-hotel.com/wp-content/themes/wUqec0RcWimbledon/images/zoom.png" class="view">
             </li>		
                 </ul>
